Fim de Array, começo de Date.

--- a/06_arrays/array_iteration/index.html
+++ b/06_arrays/array_iteration/index.html
@@ -12,6 +12,10 @@
 <body>
     <div>
         <p id="demostr"></p>
+        <br>
+        <p id="demostr2"></p>
+        <br>
+        <p id="demostr3"></p>
     </div>
 
     <script src="script.js"></script>
