--- a/07_date_gmt/01_date_intro/index.html
+++ b/07_date_gmt/01_date_intro/index.html
@@ -6,10 +6,20 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="style.css">
-     <title>Document</title>
+     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&family=Prompt:wght@500;700&display=swap"
+          rel="stylesheet">
+     <title>Date</title>
 </head>
 
 <body>
+
+     <figure class="card">
+          <figcaption>
+               <button class="cta">
+                    <p>Introdução a 'Date()'</p>
+               </button>
+          </figcaption>
+     </figure>
 
 
      <script src="script.js"></script>
