add novo material de estudo javascript

--- a/11_loop_for/index.html
+++ b/11_loop_for/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <p id="dem"></p>
+    <p id="demFor"></p>
+    <p id="demCarros"></p>
+    <p id="demCarros2"></p>
     <script src="script.js"></script>
   </body>
 </html>
