--- a/15_break_continue/index.html
+++ b/15_break_continue/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ept-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,8 +9,6 @@
   <body>
     <p id="dem"></p>
     <p id="dem2"></p>
-    <p id="dem3"></p>
-    <p id="dem4"></p>
     <script src="script.js"></script>
   </body>
 </html>
