add novo material curso javascript w3schools

--- a/21_errors/index.html
+++ b/21_errors/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Worker</title>
+    <title>Try...Catch</title>
   </head>
   <body>
-    <h2>contagem: <output id="res"></output></h2>
-    <button onclick="start()">Start</button>
-    <button onclick="stop()">Stop</button>
-
-    <script src="script.js"></script>
+    <input type="text" id="dem" />
+    <button type="button" onclick="func()">Test input</button>
+    <p id="p01"></p>
+    <script src="errors.js"></script>
   </body>
 </html>
