--- a/22_this/index.html
+++ b/22_this/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Worker</title>
+    <title>this</title>
   </head>
   <body>
-    <h2>contagem: <output id="res"></output></h2>
-    <button onclick="start()">Start</button>
-    <button onclick="stop()">Stop</button>
-
-    <script src="script.js"></script>
+    <p id="dem"></p>
+    <button type="button" onclick="this.style.display='none'">
+      Clique aqui
+    </button>
+    <script src="this.js"></script>
   </body>
 </html>
